// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PageLayout tests test TaskDetails route 1`] = `
<PageLayout
  history={Array []}
  location={
    Object {
      "pathname": "/TaskDetails/taskId",
    }
  }
>
  <KogitoPageLayout
    BrandAltText="Task Console Logo"
    BrandClick={[Function]}
    BrandSrc="taskConsoleLogo.svg"
    PageNav={
      <Nav
        aria-label="Nav"
        onSelect={[Function]}
        onToggle={[Function]}
        ouiaSafe={true}
        theme="dark"
      >
        <NavList
          ariaLeftScroll="Scroll left"
          ariaRightScroll="Scroll right"
        >
          <NavItem
            isActive={false}
          >
            <Link
              data-ouia-navigation-name="task-inbox"
              to="/TaskInbox"
            >
              Task Inbox
            </Link>
          </NavItem>
        </NavList>
      </Nav>
    }
    pageNavOpen={false}
  >
    <MockedComponent />
  </KogitoPageLayout>
</PageLayout>
`;

exports[`PageLayout tests test TaskInbox route 1`] = `
<PageLayout
  history={Array []}
  location={
    Object {
      "pathname": "/TaskInbox",
    }
  }
>
  <KogitoPageLayout
    BrandAltText="Task Console Logo"
    BrandClick={[Function]}
    BrandSrc="taskConsoleLogo.svg"
    PageNav={
      <Nav
        aria-label="Nav"
        onSelect={[Function]}
        onToggle={[Function]}
        ouiaSafe={true}
        theme="dark"
      >
        <NavList
          ariaLeftScroll="Scroll left"
          ariaRightScroll="Scroll right"
        >
          <NavItem
            isActive={true}
          >
            <Link
              data-ouia-navigation-name="task-inbox"
              to="/TaskInbox"
            >
              Task Inbox
            </Link>
          </NavItem>
        </NavList>
      </Nav>
    }
    pageNavOpen={false}
  >
    <MockedComponent />
  </KogitoPageLayout>
</PageLayout>
`;

exports[`PageLayout tests test default route 1`] = `
<PageLayout
  history={Array []}
  location={
    Object {
      "pathname": "/",
    }
  }
>
  <KogitoPageLayout
    BrandAltText="Task Console Logo"
    BrandClick={[Function]}
    BrandSrc="taskConsoleLogo.svg"
    PageNav={
      <Nav
        aria-label="Nav"
        onSelect={[Function]}
        onToggle={[Function]}
        ouiaSafe={true}
        theme="dark"
      >
        <NavList
          ariaLeftScroll="Scroll left"
          ariaRightScroll="Scroll right"
        >
          <NavItem
            isActive={false}
          >
            <Link
              data-ouia-navigation-name="task-inbox"
              to="/TaskInbox"
            >
              Task Inbox
            </Link>
          </NavItem>
        </NavList>
      </Nav>
    }
    pageNavOpen={false}
  >
    <MockedComponent />
  </KogitoPageLayout>
</PageLayout>
`;
